--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "jquery.json-viewer",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "jQuery plugin for displaying JSON data",
   "repository": {
     "type": "git",
-    "url": "https://github.com/abodelot/jquery.json-viewer.git"
+    "url": "https://github.com/acidjazz/jquery.json-viewer.git"
   },
   "keywords": [
     "jquery-plugin",
@@ -15,7 +15,7 @@
   "author": "Alexandre Bodelot <alexandre.bodelot@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/abodelot/jquery.json-viewer/issues"
+    "url": "https://github.com/acidjazz/jquery.json-viewer/issues"
   },
-  "homepage": "https://github.com/abodelot/jquery.json-viewer"
+  "homepage": "https://github.com/acidjazz/jquery.json-viewer"
 }
